--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,13 @@
 .wallet-adapter-button-trigger:hover {
   opacity: 0.85 !important;
 }
+
+main {
+  position: relative;
+  z-index: 1;
+}
+
+.content {
+  position: relative;
+  z-index: 1;
+}
